// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Spinner Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iyqvCV sc-hHLeRK kvKuwg sc-hsOonA fPwlCE"
    >
      <div
        class="sc-fmRtwQ eGcdpz"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iyqvCV sc-hHLeRK fDtTuc sc-hsOonA fPwlCE"
    >
      <div
        class="sc-fmRtwQ jAbYuN"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-lkwKjF iKIurY khcTuI sc-hsOonA fPwlCE"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-jmNpzm efXsRo heDVKZ"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds iyqvCV sc-hHLeRK kvKuwg"
        >
          <div
            class="sc-fmRtwQ eGcdpz"
          />
          <div
            class="sc-ivTmOn dNJphr sc-cxabCf hPeMSo"
          >
            Spinning...
          </div>
        </div>
      </div>
      <div
        class="sc-dUWWNf jLMSpx"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds bjjfxN"
          style="background-color: rgb(248, 249, 253);"
        >
          Spinning, the wrapped children are made opaque
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Component Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iyqvCV sc-hHLeRK kvKuwg sc-hsOonA fPwlCE"
    >
      <div
        class="sc-fmRtwQ eGcdpz"
      />
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf hPeMSo"
      >
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf kcqfxY"
        >
          Building image 
          <button
            class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR kAoSkv"
            type="button"
          >
            12345
          </button>
          ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iyqvCV sc-hHLeRK kvKuwg sc-hsOonA fPwlCE"
    >
      <div
        class="sc-fmRtwQ eGcdpz"
      />
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf hPeMSo"
      >
        Spinning...
      </div>
    </div>
  </div>
</div>
`;
